# rotor-owl-analysis

./: .dockerignore  .gitignore  ARCHITEKTUR.md  CITATION.cff  CONSTRAINTS_INFO.md  Dockerfile  LICENSE  README.md  README_EN.md  bereinige_parameter.py  datenanalyse_realdaten.py  docker-compose.yml  dockerfile  example.owl  features_welle.csv  notizen.md  pyproject.toml  requirements.txt  validate_results.py  validate_similarities.py
.github/workflows/: ci.yml
data/: catalog-v001.xml  rotor_ontologie.owl  validierung_ergebnisse_20260217_154301.csv
data/reference/: AE_Ontology_Entwurf.xlsx  AE_Ontology_Entwurf_IN_Feedback.xlsx  Ontology_Base.owl  components.csv  parameters.csv  paramtypes.csv  relations.csv  units.csv
src/rotor_owl/: Ontology.py  __main__.py  aufbereitung.py  cli.py  dataset_generate.py  feature_extract.py  feature_fetcher.py  gesamt_aehnlichkeit.py  kategorische_aehnlichkeit.py  konfiguration.py  numerische_aehnlichkeit.py  ontology_stats.py  owl_loader.py  prep.py  similarity.py  sparql_helpers.py  streamlit_app.py
src/rotor_owl/config/: kategorien.py  konfiguration.py
src/rotor_owl/daten/: Ontology.py  __init__.py  dataset_generate.py  (+6 more)
tests/: conftest.py  test_aufbereitung.py  test_automatic_weights.py  test_cli_stats.py  test_feature_variance.py  test_features_csv.py  test_generate_dataset.py  test_gesamt_aehnlichkeit.py  test_graph_embeddings.py  test_kategorische_aehnlichkeit.py  test_math_utils.py  test_numerische_aehnlichkeit.py  test_ontology_helpers.py  test_owl_loader.py  test_sanity_check_similarities.py  test_similarity_jaccard.py
(+13 files in other folders)
