[project]
name = "rotor-owl-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["owlready2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
